# word2vec

./: .gitignore  CMakeLists.txt  README.txt  compute-accuracy.c  demo-analogy.sh  demo-classes.sh  demo-phrase-accuracy.sh  demo-phrases.sh  demo-train-big-model-v1.sh  demo-word-accuracy.sh  demo-word.sh  distance.c  word-analogy.c  word2phrase.c  word2vec.c
vc_proj/: compute-accuracy.vcxproj  distance.vcxproj  word-analogy.vcxproj  word2phrase.vcxproj  word2vec.sln  word2vec.vcxproj
